syntax = "proto3";

package infrastructure.rpc.cqrs.link.v1;

option go_package = "github.com/shortlink-org/shortlink/boundaries/link/link/internal/infrastructure/rpc/link/v1";

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

// Link
message Link {
  // Field mask
  google.protobuf.FieldMask field_mask = 6;

  // URL
  string url = 1;
  // Hash by URL + salt
  string hash = 2;
  // Describe of link
  string describe = 3;

  // Create at
  google.protobuf.Timestamp created_at = 4;
  // Update at
  google.protobuf.Timestamp updated_at = 5;
}

// LinkView
message LinkView {
  // FieldMask
  google.protobuf.FieldMask field_mask = 9;

  // URL
  string url = 1;
  // Hash by URL + salt
  string hash = 2;
  // Describe of link
  string describe = 3;

  // Metadata
  string image_url = 4;
  // Meta description
  string meta_description = 5;
  // Meta keywords
  string meta_keywords = 6;

  // Create at
  google.protobuf.Timestamp created_at = 7;
  // Update at
  google.protobuf.Timestamp updated_at = 8;
}

// Links
message LinksView {
  // Links
  repeated LinkView links = 1;
}
